<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:focusableInTouchMode="true"
    android:orientation="vertical">
    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/toolbar"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/select_month"
                    android:textColor="@color/txtcol"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/select_month"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_5"

                    android:drawableLeft="@drawable/ic_calendar"
                    android:drawablePadding="@dimen/margin_10"
                    android:gravity="center_vertical"
                    android:padding="@dimen/padding_10"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/papertype"
                    android:textColor="@color/txtcol"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_paper_type"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spin_hid"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:prompt="@string/semester" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/subject"
                    android:textColor="@color/txtcol"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_subject"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spin_hid"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:prompt="@string/semester" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/semester"
                    android:textColor="@color/txtcol"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_semester"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spin_hid"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:prompt="@string/semester" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/classtype"
                    android:textColor="@color/txtcol"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_classtype"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spin_hid"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:prompt="@string/semester" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/section"
                    android:textColor="@color/txtcol"
                    android:textSize="@dimen/text_title_size"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner_section"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/spin_hid"
                    android:layout_marginTop="@dimen/margin_top"
                    android:background="@color/colorPrimary"
                    android:popupBackground="@color/grey_spinner"
                    android:prompt="@string/section"
                    android:saveEnabled="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/attandance_submit_btn"
                    style="@style/ButonGradient"
                    android:layout_width="@dimen/button_wid"
                    android:layout_height="@dimen/btn_hight"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_top"
                    android:layout_marginBottom="10dp"
                    android:text="@string/submit"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>