<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    >
    <include
        android:id="@+id/header"
        layout="@layout/header" />
    <ImageView
        android:id="@+id/textView1"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_margin="@dimen/margin_5"
        android:layout_gravity="center"
        android:padding="@dimen/margin_10"
        android:src="@drawable/mx"
         />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_16"
        android:layout_marginLeft="@dimen/margin_16"
        app:cardBackgroundColor="@color/dim_grey"
        app:cardElevation="0dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectrole"
                android:textSize="@dimen/fab_margin"
                />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_hid"
                android:id="@+id/loginSpinner"
                />

            <EditText
                android:id="@+id/loginUserName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/field_bg_new"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:digits="qwertzuiopasdfghjklyxcvbnm @,.,-,QWERTYUIOPASDFGHJKLZXCVBNM,1234567890, "
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="@dimen/small_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:maxLength="40"
                android:layout_marginRight="@dimen/small_margin"
                android:layout_marginLeft="@dimen/small_margin"
                android:textColor="@color/txtcol"
                android:textColorHint="@color/dim_grey"
                android:imeOptions="actionNext"
                android:textSize="@dimen/text_size_new" />

            <EditText
                android:id="@+id/loginUserPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/field_bg_new"
                android:hint="@string/userpassword"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="@dimen/small_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:maxLength="40"
                android:layout_marginRight="@dimen/small_margin"
                android:layout_marginLeft="@dimen/small_margin"
                android:textColor="@color/txtcol"
                android:textColorHint="@color/dim_grey"
                android:textSize="@dimen/text_size_new" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_hight_new"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:background="@color/colorPrimary"
                android:text="Sign In"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
